--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,6 +80,15 @@ select {
 }
 
 button {
+    cursor: pointer;
+}
+
+button:hover {
+    background: rgb(55, 86, 143);
+}
+
+.imprimir,
+.limpar {
     background: cornflowerblue;
     color: white;
     font-size: large;
@@ -87,10 +96,14 @@ button {
     align-items: center;
     padding: 10px 30px 10px 30px;
     margin-bottom: 25px;
-
+    cursor: pointer;
 }
 
-button:hover {
+.imprimir:hover {
+    background: rgb(55, 86, 143);
+}
+
+.limpar:hover {
     background: rgb(55, 86, 143);
 }
 
@@ -106,4 +119,38 @@ button:hover {
 
 .errosTd {
     border: 3px solid red;
+}
+
+.autocompleteList {
+    background: white;
+    list-style: none;
+    padding: unset;
+    margin: unset;
+    position: absolute;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.autocompleteList button {
+    border: unset;
+    background: unset;
+    display: block;
+    width: 100%;
+    text-align: left;
+    padding: 0.5em;
+}
+
+.autocompleteList li {
+    border: 1px solid rgb(198, 198, 198);
+    border-top: unset;
+}
+
+.autocompleteList li:hover {
+    background: rgb(219, 218, 218);
+}
+
+.autocompleteWrapper {
+    display: inline-block;
+    position: relative;
 }
